Get token details added from polymath API via url query params e.g. crowdsale/ATO

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -13,6 +13,10 @@
 .tokenProgress .tokenProgressTotal {
   float: right; }
 
+.tokenCountdown span {
+  color: #ccc;
+  font-weight: bold; }
+
 .caption {
   color: grey; }
 
